...

  render() {
    const data = Object.values(this.props.compatibleServers);
    const dataCount = Object.keys(this.props.compatibleServers).length;

    return (
      <View testID="serverDiscoveryScreen">
        <ScrollView >
          <Text testID="introduction-paragraph" style={{ marginLeft: 20, marginRight: 20, color: colors.white }}>
            Trying to find Phobrary Servers on your local network.
            Please note that you need to be connected to the same WiFi and
            local area network as your running Phobrary server.
          </Text>
          {!!dataCount && (<FlatList
            data={data}
...
